unpackaged/main/default/objects/ETDI_Assessment_Schedule__c/ETDI_Assessment_Schedule__c.object-meta.xml
<CustomObject>
    <label>ETDI Assessment Schedule</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>ETDI Assessment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Assessment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>