unpackaged/main/default/objects/ETDI_Assessment_Schedule__c/fields/Class_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>