unpackaged/main/default/objects/ETDI_Assessment_Schedule__c/fields/ETDI_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETDI_Detail__c</fullName>
    <label>ETDI Detail</label>
    <referenceTo>ETDI_Detail__c</referenceTo>
    <relationshipLabel>ETDI Assessment Schedules</relationshipLabel>
    <relationshipName>ETDI_Assessment_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>